# FinOrbit

./: .gitignore  ARCHITECTURE.md  COMPLETE_DOCUMENTATION.md  EVALUATION_FIXES_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  shared_config.py
Finorbit_LLM/: .env.example  .gitignore  MODEL_EVALUATION_REPORT.md  pyproject.toml
Finorbit_LLM/backend/: config.py  finance_agent.py  jsonparser.py  logging_config.py  models.py  server.py
Finorbit_LLM/backend/agents/: __init__.py  agent_helpers.py
Finorbit_LLM/backend/core/: __init__.py  compliance_engine.py  compliance_types.py  confidence_scorer.py  conversation_context.py  guardrails.py  llm_provider.py  multi_agent_orchestrator.py  pipeline.py  query_decomposer.py  router.py  validation_models.py
Finorbit_LLM/backend/fin_fode/: __init__.py
Finorbit_LLM/backend/guardrails/: pipeline.py
Finorbit_LLM/backend/migrations/: 001_conversation_contexts.sql
Finorbit_LLM/backend/rules/: compliance_rules.json
Finorbit_LLM/backend/services/: decision_engine.py  (+1 more)
Finorbit_LLM/tests/: check_agent_history.py  check_db.py  evaluation_dataset.json  evaluation_report.json  ingest_sample_docs.py  quick_perf_test.py  run_evaluation.py  run_performance_benchmark.py  test_advisor_handover.py  test_citations.py  test_compliance_engine_json.py  test_fode_sources.py  test_fode_tone_filter.py  test_guardrails_enforcement.py  test_hallucination_fallback.py  test_llm_routing.py  test_orchestrator_query_integrity.py  test_rag_agent.py  test_rag_tool.py  test_regulatory_consistency_context.py  test_router_load.py  test_router_regression.py  test_semantic_compliance.py  test_server_compliance_module.py
(+79 files in other folders)
